Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.2.0-rc1
-
Ubuntu 12.04, Mac OSX 10.8, Qt Creator 3.2 based on Qt5.3.1
-
ccc6b09ccec18381940cca9502630333b280c8b8
Description
Steps to reproduce:
- start Creator, go to Tools -> Options... -> Help
- switch combo box 'On context help:' to 'Always Show in Help Mode' or 'Always Show Side-by-Side' or 'Always Show in External Window'
- on Welcome page hit 'Get Started Now'
- Creator switches to Help mode, displays current Creator documentation
- switch back to Welcome mode, hit 'Get Started Now' again
- Creator switches to Help mode, displays a blank page "(Untitled)"
Note: This works if you keep 'Show Side-by-Side if Possible' for the combo box.
Attachments
For Gerrit Dashboard: QTCREATORBUG-12742 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
97627,2 | Help: Fix funny blank page when opening same URL again | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |